--- a/src/style/game.scss
+++ b/src/style/game.scss
@@ -23,12 +23,42 @@
   align-items: center;
   border-radius: 4px;
   background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transform: rotateY(180deg);
+  animation: hideCard 2s linear;
+  transition: transform 0.5s;
 
-  & img{
-    max-width: 80%;
-    max-height: 80%;
-    width: 80px;
-    height: 80px;
-  }
+}
+.card img{
+  max-width: 80%;
+  max-height: 80%;
+  transform: scale(0);
+  animation: hideImg 2s linear;
+  transition: transform 0.5s;
 }
 
+
+@keyframes hideCard {
+  0%, 70%{transform: rotateY(0)}
+  100%{transform: rotateY(180deg)}
+}
+@keyframes hideImg {
+  0%, 70%{transform: scale(1)}
+  100%{transform: scale(0)}
+}
+
+.card.active{
+  transform: rotateY(0);
+  & img{
+    transform: scale(1);
+    max-width: 80%;
+    max-height: 80%;
+  }
+}
+.card.correct{
+  background-color: greenyellow;
+}
+.card.wrong{
+  background-color: orangered;
+}
