--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,6 +22,8 @@
   width: 100%;
   background-image: url("../media/yuantu.png");
   background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
  }
  & .info{
   flex: 1;
