--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -23,7 +23,7 @@
  }
  & .photo{
   height: 400px;
-  width: 100%;
+  width: 400px;
   background-image: url("../media/yuantu.png");
   background-size: contain;
   background-position: center;
